--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,10 +58,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+  - Assets/images/dice-1.png
+  - Assets/images/dice-2.png
+  - Assets/images/dice-3.png
+  - Assets/images/dice-4.png
+  - Assets/images/dice-5.png
+  - Assets/images/dice-6.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
